# ML_TA_Sessions

./: .gitignore  TA_session_1.ipynb  pyproject.toml
data/MIMIC/: comin_felix_CML_2025.csv  garcia_joan_CML_2025.csv
session_1/: TA_session_1.ipynb
session_2/: TA2_linreg.ipynb  TA2_linreg.py
session_3/: TA3_spotify.ipynb  ample_lex_CML_2025.ipynb
session_3/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
session_3/catboost_info/learn/: events.out.tfevents
