[project]
name = "ta-sessions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "jax>=0.8.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.1.1",
]
